Use Stream.toList() when suggested by IntelliJ